# linzer-system

./: .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  compose.yaml
doc/: DataFlow.md  UseCase.md
doc/Broker/: struct.md
doc/Topic/: struct.md
doc/design/: UseCase.md
doc/design/Broker/: struct.md
doc/design/Connection/: struct.md
doc/design/Message/: struct.md
doc/design/Topic/: struct.md
doc/goals/: goals.md
doc/interfaces/: index.md
doc/workflow/: bench.md  build.md  check.md  clean.md  dependencies.md  doc.md  getting-started.md  index.md  install.md  run.md  test.md
src/: config.rs  connection.rs  controller.rs  lib.rs  listener.rs  main.rs  manager.rs  threaded.rs
src/broker/: broker_controller.rs  broker_manager.rs
src/connection/: connection_manager.rs
src/interfaces/: cli.rs
src/listener/: listener.rs
src/message/: message.rs
