[package]
name = "linzer_system"
edition = "2024"
version = "0.1.0"
description = "A Rust library for the Linzer system"
license = "MIT"
authors = ["Or Linzer <orlinzer@gmail.com>"]
keywords = ["rust", "linzer", "system"]

[features]
default = []
production = []

[dependencies]
clap = "3.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"

[dev-dependencies]
async-std = "1.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
